--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Simple shoulder milling calculations",
   "main": "src/App.js",
   "directories": {
-    "test": "test"
+     "src":"src",
+    "test":"test"
   },
   "scripts": {
     "test": "mocha"
