--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "shouldermillingcalcs",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "Simple shoulder milling calculations",
   "main": "src/App.js",
   "directories": {
-     "src":"src",
-    "test":"test"
+    "src": "src",
+    "test": "test"
   },
   "scripts": {
     "test": "mocha"
@@ -14,6 +14,8 @@
   "author": "Peter McCullough",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.3.4",
     "mocha": "^8.4.0"
-  }
+  },
+  "dependencies": {}
 }
