--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "three": "^0.130.1"
+    "three": "^0.130.1",
+    "three-orbit-controls": "^82.1.0"
   }
 }
