--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "geneticalgorithmsformilling",
   "version": "1.0.0",
-  "description": "",
+  "type": "module",
+  "description": "Simple shoulder milling calculations using genetic algorithms",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "build": "webpack"
   },
   "repository": {
@@ -19,7 +20,9 @@
   },
   "homepage": "https://github.com/pmccullough060/Genetic-Algorithms-For-Milling#readme",
   "devDependencies": {
+    "chai": "^4.3.4",
     "css-loader": "^5.2.6",
+    "mocha": "^9.0.3",
     "style-loader": "^3.0.0",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
